--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,53 @@
 *{
-    background-color: #D3D3D3;
+    background-color: #eee;
+    box-sizing: border-box;
+}
+
+.h1-container{
+    width: 700px;
+    height:auto;
+    margin: 0 auto 5rem;
+    text-align: center;
+    border-bottom: 20px double rgb(23 45 145);
+
 }
 
 h1{
-    text-align: center;
-    text-decoration: underline;
+    /* text-align: center; */
     font-family: 'Courier New', 'monospace', 'serif';
-    font-size: 70px;
+    font-size: 50px;
+    font-style: oblique;
+    background-color: rgba(241, 245, 44, 0.8);
+    padding: 2rem;
 }
 
-h2{
-    font-size: 30px;
-    font-family: 'Trebuchet MS', 'serif';
+.recipe-container{
+    display: block;
+    width: fit-content;
+    margin: 0 auto;
 }
 
-h3{
-    font-size: 25px;
-    font-family:Georgia, 'Times New Roman', Times, serif;
+ul{
+    /* padding-left: 10rem; */
+    list-style: none;
 }
 
-img{
-    width: 500px;
-    height: auto;
+li{
+    padding: 1.5rem;
+    border: 3px solid black;
+    width: 600px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    display: block;
+    background-color: rgba(245, 86, 44, 0.8);
+    margin: 2rem;
 }
+
+a{
+    color: #d3d3d3;
+    font-size: 2rem;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: 1000;
+    background: none;
+    padding: 0 0 0 1.5rem;
+}
+
